[gd_scene load_steps=4 format=3 uid="uid://685o3qwltpv8"]

[ext_resource type="Script" path="res://scenes/ui/settings/exit_popup.gd" id="1_8bjmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48vuk"]
bg_color = Color(0.18359, 0.18359, 0.18359, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_da28j"]
font_size = 25

[node name="ExitPopup" type="CanvasLayer"]
layer = 50
script = ExtResource("1_8bjmq")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.223529, 0.223529, 0.223529, 0.368627)

[node name="PanelContainer" type="PanelContainer" parent="Background"]
custom_minimum_size = Vector2(850, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = -150.0
offset_right = 425.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_48vuk")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TopLabel" type="Label" parent="Background/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "HOME_EXIT_WARNING"
label_settings = SubResource("LabelSettings_da28j")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="BtnExit" type="Button" parent="Background/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "HOME_EXIT_EXIT"

[node name="BtnCancel" type="Button" parent="Background/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "HOME_EXIT_CANCEL"

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/PanelContainer/VBoxContainer/HBoxContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="Background/PanelContainer/VBoxContainer/HBoxContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
